--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="assets/style.css">
-  <title>GSK main1</title>
+  <title>GSK main</title>
 </head>
 <body>
+   <header>
+      <span><a href="#">GSK</a></span>
+      <span>
+            <a href="#">
+               <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <g id="Group 13">
+               <path id="Vector 1" d="M26 1H1" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+               <path id="Vector 2" d="M26 9L10 9" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+               <path id="Vector 3" d="M26 17H1" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+               </g>
+            </a>
+         </svg>
+      </span>
+   </header>
+   <aside>
+      <i class="bi bi-x-lg"></i>
+   </aside>
+   <div class="asideBg"></div>
+
   <div class="container">
     <div><img src="assets/imgs/mainbg.png" alt="배경이미지"></div>
     <div class="main">
