--- a/index.html
+++ b/index.html
@@ -25,8 +25,19 @@
          </svg>
       </span>
    </header>
-   <aside>
+   <aside class="aside">
       <i class="bi bi-x-lg"></i>
+      <ul>
+         <li><a href="">직무스케줄</a></li>
+         <li><a href="">업체현황</a></li>
+         <li><a href="">수질현황</a></li>
+         <li><a href="">알림함</a></li>
+         <li><a href="">업무톡</a></li>
+         <li><a href="">공지사항</a></li>
+         <li><a href="">자료실</a></li>
+         <li><a href="">비밀번호 변경</a></li>
+         <li><a href="">로그아웃</a></li>
+      </ul>
    </aside>
    <div class="asideBg"></div>
 
