--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <header>
-      <span><a href="#">GSK</a></span>
+      <span><a href="index.html">GSK</a></span>
       <span>
             <a href="#">
                <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -37,6 +37,7 @@
          <li><a href="">자료실</a></li>
          <li><a href="">비밀번호 변경</a></li>
          <li><a href="">로그아웃</a></li>
+         <li><a href="sub.html">근태관리</a></li>
       </ul>
    </aside>
    <div class="asideBg"></div>
