--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 <body>
    <header>
-      <span><a href="index.html">GSK</a></span>
+      <span><a href="index.html"><img src="assets/imgs/nav-logo.png" alt=""></a></span>
       <span>
-            <a href="#">
-               <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-               <g id="Group 13">
-               <path id="Vector 1" d="M26 1H1" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-               <path id="Vector 2" d="M26 9L10 9" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-               <path id="Vector 3" d="M26 17H1" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-               </g>
-            </a>
-         </svg>
+        <a href="#">
+            <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="Group 13">
+            <path id="Vector 1" d="M26 1H1" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+            <path id="Vector 2" d="M26 9L10 9" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+            <path id="Vector 3" d="M26 17H1" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+            </g>
+        </a>
       </span>
    </header>
    <aside class="aside">
