--- a/sub.html
+++ b/sub.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <header>
-      <span><a href="index.html">GSK</a></span>
+      <span><a href="index.html"><img src="assets/imgs/nav-logo.png" alt=""></a></span>
       <span>
             <a href="#">
                <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
