--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <li><a href="">공지사항</a></li>
          <li><a href="">자료실</a></li>
          <li><a href="">비밀번호 변경</a></li>
-         <li><a href="">로그아웃</a></li>
+         <li><a href="login.html">로그아웃</a></li>
          <li><a href="sub.html">근태관리</a></li>
       </ul>
    </aside>
