--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 </h1>
    <input type="text" placeholder="아이디">
    <input type="text" placeholder="비밀번호">
-   <input type="submit" value="로그인">
+   <input type="submit" value="로그인" onclick="location.href='index.html'">
 </div>
 <style>
 .wrapper {
