--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="assets/style.css">
-  <title>GSK main1</title>
+  <title>GSK main</title>
 </head>
 <body>
    <header>
@@ -28,16 +28,16 @@
    <aside class="aside">
       <i class="bi bi-x-lg"></i>
       <ul>
-         <li><a href="">직무스케줄</a></li>
-         <li><a href="">업체현황</a></li>
+         <li><a href="index.html">대시보드</a></li>
+         <li><a href="company.html">업체현황</a></li>
          <li><a href="">수질현황</a></li>
+         <li><a href="sub.html">근태관리</a></li>
+         <li><a href="sub.html">일정관리</a></li>
          <li><a href="">알림함</a></li>
-         <li><a href="">업무톡</a></li>
+         <li><a href="">지톡</a></li>
          <li><a href="">공지사항</a></li>
-         <li><a href="">자료실</a></li>
          <li><a href="">비밀번호 변경</a></li>
          <li><a href="login.html">로그아웃</a></li>
-         <li><a href="sub.html">근태관리</a></li>
       </ul>
    </aside>
    <div class="asideBg"></div>
