--- a/login.html
+++ b/login.html
@@ -19,6 +19,12 @@
    <input type="submit" value="로그인" onclick="location.href='index.html'">
 </div>
 <style>
+body {
+  background: url('assets/imgs/wave.jpg') no-repeat;
+  background-position: top;
+  background-size: cover 100vh;
+  height: 100%;
+}
 .wrapper {
    position: absolute;
    left: 50%; top: 50%; transform: translate(-50%, -50%);
