--- a/company.html
+++ b/company.html
@@ -156,6 +156,7 @@
 
   <script src="assets/script.js"></script>
   <script src="assets/asideMenu.js"></script>
+  <script src="assets/company.js"></script>
   <script>
     $(function(){
       var allPanels = $('.content').hide();
@@ -166,41 +167,7 @@
         $(this).next().slideDown('easing');
         return false;
       });
-
-      var tabBtn1 = $('.tabBtn > button:nth-child(1)');
-      var tabBtn2 = $('.tabBtn > button:nth-child(2)');
-      var tabBtn3 = $('.tabBtn > button:nth-child(3)');
-      var tabCtn1 = document.querySelector('.content > section:nth-child(2) > article:nth-child(1)');
-      var tabCtn2 = document.querySelector('.content > section:nth-child(2) > article:nth-child(2)');
-      var tabCtn3 = document.querySelector('.content > section:nth-child(2) > article:nth-child(3)');
-
-      tabCtn1.style.display = "block";
-      tabCtn2.style.display = "none";
-      tabCtn3.style.display = "none";
-
-      tabBtn1.click(function(){
-        if(tabCtn1.style.display === "none"){
-          tabCtn1.style.display = "block";
-          tabCtn2.style.display = "none";
-          tabCtn3.style.display = "none";
-        };
-      });
-      tabBtn2.click(function(){
-        if(tabCtn2.style.display === "none"){
-          tabCtn1.style.display = "none";
-          tabCtn2.style.display = "block";
-          tabCtn3.style.display = "none";
-        };
-      });
-      tabBtn3.click(function(){
-        if(tabCtn3.style.display === "none"){
-          tabCtn1.style.display = "none";
-          tabCtn2.style.display = "none";
-          tabCtn3.style.display = "block";
-        };
-      });
     });
-
   </script>
 </body>
 </html>
