--- a/company.html
+++ b/company.html
@@ -46,9 +46,9 @@
   <div class="container">
     <section class="select">
       <select name="업체이름" id="">
-        <option value="업체이름">업체A</option>
-        <option value="업체이름">업체B</option>
-        <option value="업체이름">업체C</option>
+        <option value="업체이름">A업체이름</option>
+        <option value="업체이름">B업체이름</option>
+        <option value="업체이름">C업체이름</option>
       </select>
     </section>
 
