--- a/company.html
+++ b/company.html
@@ -74,9 +74,9 @@
             <button>R.O</button>
           </section>
           <section>
-            <article>냉각탑 그래프</article>
-            <article>보일러 그래프</article>
-            <article>R.O 그래프</article>
+             <article>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프</article>
+             <article>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프</article>
+             <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
           </section>
           <section>
             <button>수질분석보고서 보기</button>
@@ -107,9 +107,9 @@
             <button>R.O</button>
           </section>
           <section>
-            <article>냉각탑 그래프</article>
-            <article>보일러 그래프</article>
-            <article>R.O 그래프</article>
+             <article>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프</article>
+             <article>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프</article>
+             <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
           </section>
           <section>
             <button>수질분석보고서 보기</button>
@@ -140,9 +140,9 @@
             <button>R.O</button>
           </section>
           <section>
-            <article>냉각탑 그래프</article>
-            <article>보일러 그래프</article>
-            <article>R.O 그래프</article>
+             <article>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프</article>
+             <article>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프</article>
+             <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
           </section>
           <section>
             <button>수질분석보고서 보기</button>
