--- a/company.html
+++ b/company.html
@@ -55,7 +55,7 @@
     <section class="co_wrapper">
       <article>
         <div class="titleBar">
-          <h1>업체이름</h1>
+          <h1>와우커뮤니케이션</h1>
           <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
         </div>
         <hr>
@@ -88,7 +88,7 @@
     <section class="co_wrapper">
       <article>
         <div class="titleBar">
-          <h1>업체이름</h1>
+          <h1>지에스케이</h1>
           <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
         </div>
         <hr>
