--- a/company-info.html
+++ b/company-info.html
@@ -45,7 +45,6 @@
 
   <div class="container">
 
-
 <section class="co-header">
   <div>
     <h1>와우커뮤니케이션</h1>
@@ -56,7 +55,6 @@
     </div>
   </div>
 </section>
-
 
     <section class="co_wrapper co_default">
       <table>
@@ -69,36 +67,19 @@
       </table>
     </section>
 
-
     <section class="co_wrapper">
-      <article>
-        <div class="titleBar">
-          <h1>와우커뮤니케이션</h1>
-          <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
-        </div>
-        <hr>
-        <h2><strong>방문주기</strong> : 월1회/Pump Strock</h2>
-        <h2><strong>최근 방문일</strong> : 2020.12.29. 15:30</h2>
-      </article>
+
       <article class="accordion">
         <div class="toggleBar">
-          <h2>LSI지수 : <strong> 033</strong></h2>
+          <h2>업체 위치정보</h2>
           <span><i class="bi bi-chevron-down"></i></span>
         </div>
         <div class="content">
-          <section class="tabBtn">
-            <button>냉각탑</button>
-            <button>보일러</button>
-            <button>R.O</button>
-          </section>
-          <section>
-             <article>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프</article>
-             <article>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프</article>
-             <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
-          </section>
-          <section>
-            <button>수질분석보고서 보기</button>
-          </section>
+          <p>충청남도 당진시 석문면 대호만로 1221-32</p>
+          <div class="map">
+
+API ipsum dolor sit amet, consectetur adipisicing elit. Aut maiores nam commodi quae, vitae quaerat odit excepturi quis sapiente minus distinctio eum corporis! Magnam delectus quod, labore, repellendus fugit illum.
+          </div>
         </div>
       </article>
     </section>
@@ -106,18 +87,10 @@
 
 
     <section class="co_wrapper">
-      <article>
-        <div class="titleBar">
-          <h1>업체이름</h1>
-          <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
-        </div>
-        <hr>
-        <h2><strong>방문주기</strong> : 월1회/Pump Strock</h2>
-        <h2><strong>최근 방문일</strong> : 2020.12.29. 15:30</h2>
-      </article>
+
       <article class="accordion">
         <div class="toggleBar">
-          <h2>LSI지수 : <strong> 033</strong></h2>
+          <h2>사용약품보기</h2>
           <span><i class="bi bi-chevron-down"></i></span>
         </div>
         <div class="content">
@@ -127,12 +100,33 @@
             <button>R.O</button>
           </section>
           <section>
-             <article>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프<br>냉각탑 그래프</article>
-             <article>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프<br>보일러 그래프</article>
-             <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
-          </section>
-          <section>
-            <button>수질분석보고서 보기</button>
+             <article>
+               <table>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td></td><td></td> </tr>
+               </table>
+             </article>
+             <article>
+               <table>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td></td><td></td> </tr>
+               </table>
+             </article>
+             <article>
+               <table>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td>제품명</td><td>스케일 부식 미생물 제어</td> </tr>
+                 <tr> <td></td><td></td> </tr>
+               </table>
+             </article>
           </section>
         </div>
       </article>
