--- a/company.html
+++ b/company.html
@@ -56,7 +56,7 @@
       <article>
         <div class="titleBar">
           <h1>와우커뮤니케이션</h1>
-          <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
+          <span><a href="company-info.html"><i class="bi bi-house-fill"></i></a></span>
         </div>
         <hr>
         <h2><strong>방문주기</strong> : 월1회/Pump Strock</h2>
