--- a/company.html
+++ b/company.html
@@ -89,7 +89,7 @@
       <article>
         <div class="titleBar">
           <h1>지에스케이</h1>
-          <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
+          <span><a href="company-info.html"><i class="bi bi-house-fill"></i></a></span>
         </div>
         <hr>
         <h2><strong>방문주기</strong> : 월1회/Pump Strock</h2>
@@ -122,7 +122,7 @@
       <article>
         <div class="titleBar">
           <h1>업체이름</h1>
-          <span><a href="#"><i class="bi bi-house-fill"></i></a></span>
+          <span><a href="company-info.html"><i class="bi bi-house-fill"></i></a></span>
         </div>
         <hr>
         <h2><strong>방문주기</strong> : 월1회/Pump Strock</h2>
