--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -148,8 +148,8 @@
 <script src="assets/company.js"></script>
 
 <script type="text/javascript">
-  document.getElementById('popup').style.display="block";
-  document.getElementById('popup');
+  document.getElementById('popup').style.display="none";
+  document.getElementById('popupBg').style.display="none";
 
 document.getElementById('popBtn').addEventListener('click', function(){
   document.getElementById('popup').style.display="block";
