--- a/sub.html
+++ b/sub.html
@@ -33,7 +33,7 @@
         <li><a href="company.html">업체현황</a></li>
         <li><a href="">수질현황</a></li>
         <li><a href="sub.html">근태관리</a></li>
-        <li><a href="sub.html">일정관리</a></li>
+        <li><a href="diary.html">일정관리</a></li>
         <li><a href="">알림함</a></li>
         <li><a href="">지톡</a></li>
         <li><a href="">공지사항</a></li>
