--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -146,28 +146,8 @@
 <script src="assets/script.js"></script>
 <script src="assets/asideMenu.js"></script>
 <script src="assets/company.js"></script>
+<script src="assets/popup.js"></script>
 
-<script type="text/javascript">
-  document.getElementById('popup').style.display="none";
-  document.getElementById('popupBg').style.display="none";
-
-document.getElementById('popBtn').addEventListener('click', function(){
-  document.getElementById('popup').style.display="block";
-  document.getElementById('popupBg').style.display="block";
-});
-document.getElementById('close').firstChild.addEventListener('click', function(){
-  document.getElementById('popup').style.display="none";
-  document.getElementById('popupBg').style.display="none";
-});
-document.getElementById('popupBg').addEventListener('click', function(){
-  document.getElementById('popup').style.display="none";
-  document.getElementById('popupBg').style.display="none";
-});
-document.getElementById('closeBtn').addEventListener('click', function(){
-  document.getElementById('popup').style.display="none";
-  document.getElementById('popupBg').style.display="none";
-});
-</script>
 
 </body>
 </html>
