--- a/diary.html
+++ b/diary.html
@@ -27,7 +27,6 @@
            </g>
            </svg>
         </a>
-
      </span>
   </header>
   <aside class="aside">
@@ -46,6 +45,56 @@
      </ul>
   </aside>
   <div class="asideBg"></div>
+
+
+  <!-- 팝업 -->
+  <div id="popup" class="popup">
+    <button id="close"><i class="bi bi-x-lg"></i></button>
+    <h1>업무노트 작성</h1>
+    <select class="" name="업체명">
+      <option value="업체명">업체명</option>
+      <option value="업체명">업체명</option>
+      <option value="업체명">업체명</option>
+    </select>
+    <div class="arrowDown">
+      <!-- <div class="arrow"><i class="bi bi-caret-down-fill"></i></div> -->
+      <select class="" name="업체명">
+        <option value="업체명">업체명</option>
+        <option value="업체명">업체명</option>
+        <option value="업체명">업체명</option>
+      </select>
+    </div>
+    <h2>Chemical 투입 내역</h2>
+    <table>
+      <tr>
+        <td>제품명</td>
+        <td colspan="3" class="tableTh">투입량</td>
+      </tr>
+      <tr>
+        <td>제품명</td>
+        <td><input type="text"></td><td class="divsion">/</td>
+        <td><input type="text"></td>
+      </tr>
+      <tr>
+        <td>제품명</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>제품명</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+    </table>
+    <h2>Comment</h2>
+    <textarea name="name" rows="8" cols="80"></textarea>
+    <div>
+      <button id="closeBtn">취소</button>
+      <button>등록</button>
+    </div>
+  </div>
+  <div id="popupBg" class="popupBg"></div>
+
+  <!-- 팝업끝 -->
+
 
   <div class="container">
     <section class="co_wrapper">
@@ -278,9 +327,43 @@
         </table>
       </div>
     </div>
-  </div>
+
+    <section class="tableDefault">
+      <h1>2021.08.25</h1>
+      <table>
+        <tr>
+          <th>10:00</th>
+          <td>(주)와우커뮤니케이션</td>
+          <td><a><i class="bi bi-trash-fill"></i></a></td>
+        </tr>
+        <tr>
+          <th>10:00</th>
+          <td>(주)와우커뮤니케이션</td>
+          <td><a><i class="bi bi-trash-fill"></i></a></td>
+        </tr>
+        <tr>
+          <th>10:00</th>
+          <td>(주)와우커뮤니케이션</td>
+          <td><a><i class="bi bi-trash-fill"></i></a></td>
+        </tr>
+        <tr>
+          <th>10:00</th>
+          <td>(주)와우커뮤니케이션</td>
+          <td><a><i class="bi bi-trash-fill"></i></a></td>
+        </tr>
+      </table>
+    </section>
+
+
+
+    </div>
+
+<script src="assets/script.js"></script>
   <script src="assets/sub.js"></script>
   <script src="assets/asideMenu.js"></script>
+  <script src="assets/popup.js"></script>
+
+</style>
 </body>
 
 </html>
