--- a/sub.html
+++ b/sub.html
@@ -97,7 +97,7 @@
           <p>등록완료</p>
         </a>
       </section>
-      <section>
+      <section class="tableDefault">
         <h1>오늘의 일정</h1>
         <table>
           <tr>
