--- a/company.html
+++ b/company.html
@@ -75,7 +75,7 @@
          <li><a href="sub.html">근태관리</a></li>
          <li><a href="diary.html">일정관리</a></li>
          <li><a href="">알림함</a></li>
-         <li><a target="_blank" href="https://jdwcg.github.io/qbot/">지톡</a></li>
+         <li><a href="https://jdwcg.github.io/qbot/">지톡</a></li>
          <li><a href="">공지사항</a></li>
          <li><a href="">비밀번호 변경</a></li>
          <li><a href="login.html">로그아웃</a></li>
