--- a/sub.html
+++ b/sub.html
@@ -144,8 +144,8 @@
     <section>
       <i class="bi bi-x-lg"></i>
       <span>
-        <p><strong>현재 시간으로 퇴근처리 하시겠습니까?</strong></p>
-        <p>반갑습니다. ○○님<br>퇴근처리가 완료되면 수정이 불가능합니다.</p>
+        <p><strong>오늘도 수고하셨어요.</strong></p>
+        <p>퇴근하시기 전에 업무일지도 작성해주세요.</p>
       </span>
       <div>
         <button>아니오</button>
