--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -115,17 +115,6 @@
   <script src="assets/script.js"></script>
   <script src="assets/asideMenu.js"></script>
   <script src="assets/company.js"></script>
-  <script>
-    $(function(){
-      var allPanels = $('.content').hide();
-      $('.content:first-child').show();
-
-      $('.accordion > .toggleBar').click(function() {
-        allPanels.slideUp();
-        $(this).next().slideDown('easing');
-        return false;
-      });
-    });
-  </script>
+  <script src="assets/acc.js"></script>
 </body>
 </html>
