--- a/company.html
+++ b/company.html
@@ -202,34 +202,7 @@
   <script src="assets/script.js"></script>
   <script src="assets/asideMenu.js"></script>
   <script src="assets/company.js"></script>
-  <script>
-    // $(function(){
-    //   var allPanels = $('.content').hide();
-    //   $('.content:first-child').show();
-    //
-    //     allPanels.slideUp();
-    //   $('.accordion > .toggleBar').click(function() {
-    //     $(this).next().slideDown('easing');
-    //     return false;
-    //   });
-    // });
-    $(function(){
-      $('.content').hide();
-      $('.bi-chevron-up').hide();
-      $('.content').eq(0).show();
-       $('.toggleBar').click(function() {
-         $(this).next().slideToggle();
+  <script src="assets/acc.js"></script>
 
-         // if( $('.accordion > .toggleBar > span .bi-chevron-up').css('display') === 'none' ) {
-         //   $(this).children('span').children('i:first-child').css({display: 'none'});
-         //   $(this).children('span').children('i:last-child').css({display: 'block'});
-         // } else {
-         //   $(this).children('span').children('i:first-child').css({display: 'block'});
-         //   $(this).children('span').children('i:last-child').css({display: 'none'});
-         // }
-       })
-    })
-
-  </script>
 </body>
 </html>
