--- a/company-info.html
+++ b/company-info.html
@@ -78,7 +78,7 @@
           <p>충청남도 당진시 석문면 대호만로 1221-32</p>
           <div class="map">
 
-API ipsum dolor sit amet, consectetur adipisicing elit. Aut maiores nam commodi quae, vitae quaerat odit excepturi quis sapiente minus distinctio eum corporis! Magnam delectus quod, labore, repellendus fugit illum.
+지도 API 연동
           </div>
         </div>
       </article>
@@ -136,17 +136,6 @@ API ipsum dolor sit amet, consectetur adipisicing elit. Aut maiores nam commodi 
   <script src="assets/script.js"></script>
   <script src="assets/asideMenu.js"></script>
   <script src="assets/company.js"></script>
-  <script>
-    $(function(){
-      var allPanels = $('.content').hide();
-      $('.content:first-child').show();
-
-      $('.accordion > .toggleBar').click(function() {
-        allPanels.slideUp();
-        $(this).next().slideDown('easing');
-        return false;
-      });
-    });
-  </script>
+<script src="assets/acc.js"></script>
 </body>
 </html>
